[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4"
rand = "0.9.0-alpha.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
